# CircuitPython_USB_Host_Gamepad

./: LICENSE  README.rst  README.rst.license  pyproject.toml  relic_usb_host_gamepad.py  requirements.txt  usb_host_gamepad.py
.github/workflows/: release_gh.yml
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst
examples/: usb_host_gamepad_descriptor.py  usb_host_gamepad_displayio.py  usb_host_gamepad_pygame.py  usb_host_gamepad_simpletest.py
relic_usb_host_gamepad/: __init__.py  pygame.py
